--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,11 @@
 // Custom Colors
 $cyan: #33e0ff;
 $humility: #777;
+$yellow: #F0CA4D;
+$orange: #E37B40;
+$green: #14B278;
+$blue: #324D5C;
+$red: #ED3752;
 
 // Bootstrap Variables
 $brand-primary: darken(#428bca, 6.5%);
@@ -24,3 +29,7 @@ $text-color: #333;
 
 $font-size-base: 14px;
 $font-family-sans-serif: "Helvetica Neue", Helvetica, sans-serif;
+
+// Airboss variables
+$up: $orange;
+$down: $green;
